--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head></head>
+    <head>
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <title>Cat Perry's Favorite Cats</title>
+    </head>
     <body></body>
 </html>
