--- a/index.html
+++ b/index.html
@@ -6,5 +6,23 @@
     </head>
     <h1>Hello,World!</h1>
     <a href="https://flatironschool.com">Flatiron School</a>
-    <body></body>
+    <body>
+<ul>
+<li>2 slices of bread</li>
+<li>4 slices of cheese</li>
+    <ul>
+    <li>cheddar</li>
+    <li>mozzarella</li>
+    <li>pepper jack</li>
+    </ul>
+<li> 1 tablespoon of butter</li>
+</ul>
+<ol>
+    <li>Spread butter on bread and frying pan</li>
+    <li>Place bread in frying pan and fry</li>
+    <li>Add cheese on top of bread</li>
+    <li>Cover with second slice of bread</li>
+    <li>Turn over and fry for 2 minutes</li>
+</ol>
+    </body>
 </html>
