Completed second assignment

--- a/my_list2.html
+++ b/my_list2.html
@@ -1,10 +1,15 @@
+<html lang="en">
+
+    <head><link rel="stylesheet" type="text/css" href="style.css"/></head>
 <ol>   
-   <h1>My music List</h1>
-    <p>Some of my favorite post-punk and Goth songs!
-    </p>                             
+<h1>My music List</h1>   
+<p>Some of my favorite post-punk and Goth songs!
+</p>                             
 <li>"Love will tear us apart"</li>
 <li>"Bela Lugosi's dead"</li>
 <li>"A forest"</li>
 <li>"Nine while Nine"</li>
 <li>"Girlfriend in a coma"</li>
+<!--This is a comment -->
 </ol>
+</html>
