added link to flatiron school

--- a/my_list2.html
+++ b/my_list2.html
@@ -1,15 +1,15 @@
 <html lang="en">
-
+ <title>Cat Perry's Favorite Cats</title>
     <head><link rel="stylesheet" type="text/css" href="style.css"/></head>
-<ol>   
-<h1>My music List</h1>   
-<p>Some of my favorite post-punk and Goth songs!
-</p>                             
-<li>"Love will tear us apart"</li>
-<li>"Bela Lugosi's dead"</li>
-<li>"A forest"</li>
-<li>"Nine while Nine"</li>
-<li>"Girlfriend in a coma"</li>
-<!--This is a comment -->
+ <ol>   
+  <h1>My music List</h1>   
+  <p>Some of my favorite post-punk and Goth songs!</p>                             
+  <li>"Love will tear us apart"</li>
+  <li>"Bela Lugosi's dead"</li>
+  <li>"A forest"</li>
+  <li>"Nine while Nine"</li>
+  <li>"Girlfriend in a coma"</li>
+  <!--This is a comment -->
 </ol>
+<a href="https://flatironschool.com" target="blank">Flatiron school</a>
 </html>
