added tag descriptors

--- a/my_list2.html
+++ b/my_list2.html
@@ -1,7 +1,8 @@
 <html lang="en">
  <title>Cat Perry's Favorite Cats</title>
     <head><link rel="stylesheet" type="text/css" href="style.css"/></head>
- <ol>   
+ <ol>  
+    <a href="#tips">Jump to Useful links</a> 
   <h1>My music List</h1>   
   <p>Some of my favorite post-punk and Goth songs!</p>                             
   <li>"Love will tear us apart"</li>
@@ -10,6 +11,24 @@
   <li>"Nine while Nine"</li>
   <li>"Girlfriend in a coma"</li>
   <!--This is a comment -->
-</ol>
-<a href="https://flatironschool.com" target="blank">Flatiron school</a>
+ </ol>
+ <a href="https://ranobes.net" target="blank">
+    <img
+         id="tips"
+         src="https://via.placeholder.com/800x600.png"
+         alt="AdmitRise Founder"
+         title="Display title"
+         width="800" 
+         height="600"/>
+ </a>
+ <ul>
+    <li>
+        <a href="mailto:bmwangi767@gmail.com">Mail</a>
+    </li>
+    <li>
+        <a href="https://flatironschool.com" target="blank">Flatiron school</a>
+    </li>
+    <a href="#tips">This is a Relative URL link</a>
+    <a href="https://gmail.com">This is an absolute URL link</a>
+ </ul>
 </html>
